# saas-localize

./: README.md  pyproject.toml
.axentx-dev-bot/: 20260624-220336-saas-localize-docs-f9853d16.md
business/: breakeven.md  business-model-canvas.md  customer-journey.md  dataflow.md  marketing-plan.md  partner-targets.md  tech-spec.md  user-stories.md
docs/: BMC.md  PRD.md  REQUIREMENTS.md  ROADMAP.md  STORIES.md
src/: glossary.py  saas_localize.py  translator.py
tests/: test_glossary.py  test_saas_localize.py  test_translator.py
